--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,14 @@
   
   {% include analytics.html %}
   {% include baidu-analysis.html %}
+  <script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?0a3c6d537fbd69ca6ca0cbb578780c85";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+</script>
 </body>
 </html>
